--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
+  },
+  "engines": {
+    "node": "22.12.0",
+    "pnpm": "^8.15.0"
   }
 }
