--- a/supabase/functions/deno.json
+++ b/supabase/functions/deno.json
@@ -1,5 +1,6 @@
 {
   "imports": {
+    "@runware/sdk-js": "npm:@runware/sdk-js@^1.1.30",
     "@supabase/supabase-js": "jsr:@supabase/supabase-js@^2.47.10",
     "openai": "npm:openai@^4.77.0"
   }
