--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/alex-brush": "^5.1.0",
     "@fontsource/spectral": "^5.1.0",
     "@supabase/supabase-js": "^2.47.10",
+    "@tanstack/react-query": "^5.62.8",
     "clsx": "^2.1.1",
     "md5": "^2.3.0",
     "react": "^18.3.1",
