--- a/supabase/.env.example
+++ b/supabase/.env.example
@@ -1,3 +1,4 @@
 OPENAI_API_KEY=aaa
-ELEVENLABS_API_KEY=bbb
-ELEVENLABS_VOICE_ID=ccc
+RUNWARE_API_KEY=bbb
+ELEVENLABS_API_KEY=ccc
+ELEVENLABS_VOICE_ID=ddd
